# H264Net

./: .gitignore  Encoder.cpp  Encoder.h  H264Net.sln  H264Net.vcxproj  H264Net.vcxproj.filters  LICENSE  README.md  azure-pipelines.yml
H264Net/: Class1.cs  H264Net.csproj  VideoFormats.cs
H264Net-CLI/: Encoder.cpp  H264Net-CLI.vcxproj
H264Net/Encoder/: Encoder.cs  EncoderErrors.cs  FrameBitstreamInfo.cs  ParamBase.cs  SourcePicture.cs
H264NetExample/: H264NetExample.csproj  Program.cs
H264NetInvokeLayer/: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt
H264NetInvokeLayer/include/: encoder.h
H264NetInvokeLayer/lib/OpenH264/: CMakeLists.txt  WelsVP.lib  welsenc.lib
H264NetInvokeLayer/src/: Test.cpp
H264NetInvokeLayer/src/Encoder/: encoder.cpp
H264NetTests/: H264NetTests.csproj  H264NetTests2.csproj  Shared.cs
H264NetTests/Encoder/: BasicFeatures.cs
